--- a/this.css
+++ b/this.css
@@ -13,6 +13,7 @@
     display: flex;
     flex-flow: column;
     max-width: 240px;
+    min-height: 180px;
     margin: 10px;
     padding: 20px;
     background-color: #b7b7b7;
